Add memory settings to entrypoint